file(COPY lit.local.cfg DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

add_subdirectory(Builtins)
add_subdirectory(libs)
add_subdirectory(XRay)
add_subdirectory(LCALS)
add_subdirectory(harris)
add_subdirectory(ImageProcessing)
add_subdirectory(LoopInterchange)
add_subdirectory(LoopVectorization)
add_subdirectory(MemFunctions)
add_subdirectory(SLPVectorization)
if(CMAKE_SIZEOF_VOID_P EQUAL 8)
    #add_subdirectory(map_benchmark)
endif()
add_subdirectory(RNG)
